--- a/_tmux.conf
+++ b/_tmux.conf
@@ -1,4 +1,4 @@
-#prefixキーをC-aに変更する
+# prefixをC-aに変更する
 set -g prefix C-a
 
 # C-bのキーバインドを解除する
@@ -40,10 +40,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # マウス操作を有効にする
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 # 256色端末を使用する
 set -g default-terminal "screen-256color"
@@ -93,11 +90,11 @@ set -g status-position top
 
 # コピーモードを設定する
 ## viのキーバインドを使用する
-#setw -g mode-keys vi
+# setw -g mode-keys vi
 ## クリップボード共有を有効にする
-#set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
 ## コピーモードの操作をvi風に設定する
-#bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-#unbind -t vi-copy Enter
-#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
